--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,6 +1,10 @@
 <h1>Categories</h1>
 <%= form_for Product.new ,url: products_path do |f| %>
   <div class="form-group">
+    <%= f.label :categoryid%>
+    <%= f.text_field :category_id, class:'form-control',placeholder:"enter your categoryid" %>
+  </div>
+  <div class="form-group">
     <%= f.label :name %>
     <%= f.text_field :name, class:'form-control',placeholder:"enter your name" %>
   </div>
