refactor db and refactor create category

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -3,6 +3,7 @@
     <thead>
       <tr>
         <th>Name</th>
+        <th>subcategory</th>
       </tr>
     </thead>
 
@@ -10,6 +11,7 @@
       <% @categories.each do |category| %>
         <tr>
           <td><%= category.name %></td>
+          <td><%= category.parent_id %></td>
         </tr>
       <% end %>
     </tbody>
