--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,8 +1,8 @@
 <h1>Categories</h1>
 <%= form_for Category.new ,url: categories_path do |f| %>
   <div class="form-group">
-    <%= f.label :parentid %>
-    <%= f.text_field :parent_id, class:'form-control',placeholder:"enter your parent id" %>
+    <%= f.label :parent %>
+    <%= f.collection_select :parent_id, Category.all, :id, :name,prompt: "Select parent" %>
   </div>
   <div class="form-group">
     <%= f.label :name %>
