--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -13,7 +13,7 @@
       <% @products.each do |product| %>
         <tr>
           <td><%= product.category_id %></td>
-          <td><%= product.name %></td>
+          <td><%= link_to product.name, product_path(product) %></td>
           <td><%= product.description %></td>
           <td><%= product.price %></td>
         </tr>
