--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -1,5 +1,13 @@
 <h3><%= @review.user.email %>'s review for <%= @product.name %></h3>
-<p><%= @review.content %></p>
+<p><h3>review: <%= @review.content %></h3></p>
+
+<% @review.replies.each do |reply| %>
+  <%= reply.user_id %>
+   <%= reply.comment %>
+   <br>
+<% end %>
+
+<%= render 'replies/form', reply: @reply %>
 <p><% @review.rating.times do %><span class="star">★</span><% end %><% (5 - @review.rating).times do %><span class="out-of">★</span><% end %></p>
 <em><%= time_ago_in_words(@review.created_at) %> ago</em>
 <%= link_to "Return to product", product_path(@product) %>
