--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -13,6 +13,11 @@
   <ul>
     <% @product.reviews.order(:updated_at).reverse.each do |review| %>
       <li><% review.rating.times do %><span class="star">★</span><% end %><% (5 - review.rating).times do %><span class="out-of">★</span><% end %><a href="<%= product_review_path(@product, review) %>">  <%= truncate(review.content, :length => 30) %></a></li>
+      <%= render 'replies/form', reply: @reply, review: review %>
+      <% review.replies.each do |review| %>
+         <%= review.comment %>
+         <br>
+      <% end %>
     <% end %>
   </ul>
 <% end %>
