--- a/app/views/replies/_form.html.erb
+++ b/app/views/replies/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [@review, @reply] do |f| %>
+<%= form_for [review, @reply] do |f| %>
   <%= current_user.email %>
   <%= f.label :comment %>
   <%= f.text_area :comment %>
