--- a/app/views/admin/categories/new.html.erb
+++ b/app/views/admin/categories/new.html.erb
@@ -1,5 +1,5 @@
 <h1>Categories</h1>
-<%= form_for Category.new ,url: categories_path do |f| %>
+<%= form_for Category.new ,url: admin_categories_path do |f| %>
   <div class="form-group">
     <%= f.label :parent %>
     <%= f.collection_select :parent_id, Category.all, :id, :name,prompt: "Select parent" %>
@@ -12,4 +12,4 @@
     <%= f.submit 'Submit', class: 'btn btn-primary' %>
   </div>
 <% end %>
-<%= link_to 'Home',root_path %>
+<%= link_to 'Home',admin_root_path %>
