--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -1,5 +1,5 @@
 <h1>Categories</h1>
-<%= form_for Product.new ,url: products_path do |f| %>
+<%= form_for Product.new ,url: admin_products_path do |f| %>
   <div class="form-group">
     <%= f.label :categoryid%>
     <%= f.collection_select :category_id, Category.all, :id, :name,prompt: "Select Category" %>
@@ -24,4 +24,4 @@
     <%= f.submit 'Submit', class: 'btn btn-primary' %>
   </div>
 <% end %>
-<%= link_to 'Home',root_path %>
+<%= link_to 'Home',admin_root_path %>
