additional review, comment admin

--- a/app/views/admin/admin_pages/home.html.erb
+++ b/app/views/admin/admin_pages/home.html.erb
@@ -3,4 +3,7 @@
   <li><%= link_to 'Create Categories',new_admin_category_path %></li>
   <li><%= link_to 'Create products',new_admin_product_path %></li>
   <li><%= link_to 'all user',admin_users_path %></li>
+  <li><%= link_to 'all review',admin_reviews_path %></li>
+  <li><%= link_to 'all Reply',admin_replies_path %></li>
+  <li><%= link_to 'Home', root_path %></li>
 </ul>
