simple search category

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,3 +1,5 @@
+<h1>Category</h1>
+<hr>
 <div class="">
   <table>
     <thead>
@@ -6,7 +8,6 @@
         <th>subcategory</th>
       </tr>
     </thead>
-
     <tbody>
       <% @categories.each do |category| %>
         <tr>
