--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -32,8 +32,7 @@
             Login</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link">
-            <%= link_to 'logout', destroy_user_session_path, method: :delete %></a>
+            <%= link_to 'logout', destroy_user_session_path, method: :delete, class: "nav-link" %>
         </li>
       </ul>
     </div>
