--- a/app/views/shared/_page_content.html.erb
+++ b/app/views/shared/_page_content.html.erb
@@ -46,20 +46,18 @@
 
       <div class="row">
 
-        <% products = Product.last(12) %>
-
-          <% products.each do |product| %>
-            <%= render partial: 'shared/product_item', locals: {product: product} %>
-          <% end %>
-
-        </div>
-        <!-- /.row -->
+        <% @products.each do |product| %>
+          <%= render partial: 'shared/product_item', locals: {product: product} %>
+        <% end %>
 
       </div>
-      <!-- /.col-lg-9 -->
+      <!-- /.row -->
 
     </div>
-    <!-- /.row -->
+    <!-- /.col-lg-9 -->
 
   </div>
-  <!-- /.container -->
+  <!-- /.row -->
+
+</div>
+<!-- /.container -->
