edit form search

--- a/app/views/shared/_page_content.html.erb
+++ b/app/views/shared/_page_content.html.erb
@@ -52,7 +52,7 @@
 
       </div>
       <!-- /.row -->
-
+      <%= paginate @products,  theme: 'twitter-bootstrap-4' %>
     </div>
     <!-- /.col-lg-9 -->
 
