--- a/app/views/shared/_search.html.erb
+++ b/app/views/shared/_search.html.erb
@@ -1,6 +1,6 @@
-<%= form_tag categories_path, :method => 'get' do |f|  %>
-  <p>
-    <%= text_field_tag :search, params[:search] %>
-    <%= submit_tag "Search", :name => nil %>
-  </p>
+<%= form_tag categories_path, :method => 'get' do |f| %>
+<p>
+  <%= text_field_tag :search, params[:search], class:"form-control mr-sm-2" %>
+  <%= submit_tag "Search", :name => nil, class:"btn btn-outline-success my-2 my-sm-0" %>
+</p>
 <% end %>
