--- a/app/views/shared/_page_content.html.erb
+++ b/app/views/shared/_page_content.html.erb
@@ -25,13 +25,13 @@
         </ol>
         <div class="carousel-inner" role="listbox">
           <div class="carousel-item active">
-            <img class="d-block img-fluid" src="https://i.pinimg.com/originals/0a/82/1b/0a821b907790ba010080ce47b69960da.jpg" alt="First slide">
+            <img class="d-block img-fluid" src="https://footkakisg.gumlet.io/wp-content/uploads/2019/08/comfortable-ziera-shoes-in-the-footkaki-window-display-header-1920x1080.jpgq" alt="First slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block img-fluid" src="https://images.wallpaperscraft.com/image/raccoon_animal_tree_striped_96869_1920x1080.jpg" alt="Second slide">
+            <img class="d-block img-fluid" src="https://i.pinimg.com/originals/87/08/39/87083943e97792b46b0d8194243af949.jpg" alt="Second slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block img-fluid" src="https://s1.1zoom.me/b4653/435/Red_panda_Snout_Glance_567796_1920x1080.jpg" alt="Third slide">
+            <img class="d-block img-fluid" src="https://footkakisg.gumlet.io/wp-content/uploads/2019/08/comfortable-ziera-shoes-in-the-footkaki-window-display-header-1920x1080.jpg" alt="Third slide">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
